04-path-routing-and-middleware/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: demo-stripprefix
  namespace: demo-product
spec:
  stripPrefixRegex:
    regex:
      - /v[0-9]+
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: demo-stripprefix
  namespace: demo-product-dev
spec:
  stripPrefixRegex:
    regex:
      - /v[0-9]+
